--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,14 +4,11 @@
 body{
     font-family: 'Hanken Grotesk', sans-serif;
     background-color: white;
-<<<<<<< HEAD
     font-size: 18px;
     height: 100vh;  
-=======
-    height: 100vh;
->>>>>>> c3acdc207065748fe78d110e59bd0b15ee5d2d63
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container {
     display: flex;
