--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,6 +6,7 @@ body{
     background-color: white;
     font-size: 18px;
     height: 100vh;  
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
