Update css file

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -5,13 +5,14 @@ body{
     font-family: 'Hanken Grotesk', sans-serif;
     background-color: white;
     font-size: 18px;
+    margin: 0;
     height: 100vh;  
     display: grid;
     place-items: center;   
 }
 .container {
     display: flex;
-    width: 600px;
+    width: 800px;
     border-radius: 15px;
     box-shadow: 6px 9px 11px 0px #ddd;
 }
@@ -20,7 +21,7 @@ body{
     border-radius: 20px;
     background-image: linear-gradient(to bottom,hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     color: white;
-    padding: 15px ;
+    padding: 25px ;
     text-align: center;
 }
 .result h3 {
@@ -36,11 +37,12 @@ body{
     background-image: linear-gradient(to bottom,hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
 }
 .container .result .circle h1 {
-    font-size: 60px;
+    font-size: 65px;
+    margin-top: 25px;
 }
 .container .result .circle p {
     color: hsl(223, 8%, 83%);
-    margin-top: -30px;
+    margin-top: -45px;
     font-size: 15px;
 }
 .container .result p {
@@ -54,7 +56,7 @@ body{
 }
 .summary ul {
     list-style: none;
-    width: 240px;
+    width: 100%;
 }
 .summary ul li {
     margin-left: -40px;
