--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -14,7 +14,7 @@ body{
     display: flex;
     width: 700px;
     border-radius: 15px;
-    box-shadow: 6px 9px 11px 0px #ddd;
+    box-shadow: 4px 4px 10px 0px rgba(229,233,244,0.5);
 }
 .result{
     width: 50%;
@@ -106,6 +106,10 @@ body{
     text-align: center;
     border-radius: 30px;
 }
+a:hover {
+    cursor: pointer;
+    background-image: linear-gradient(to bottom,hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+    }
 @media (max-width:767px){
     .container {
         flex-direction: column;
