--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,7 +6,7 @@ body{
     background-color: white;
     font-size: 18px;
     margin: 0;
-    height: 100vh;  
+    min-height: 100vh;  
     display: grid;
     place-items: center;   
 }
